--- a/navbar.css
+++ b/navbar.css
@@ -31,7 +31,7 @@ body {
     .menu-container a {
     text-decoration: none;
     font-weight: bold;
-    color: black;
+    color: white;
     transition: color 0.3s ease;
     }
 
