--- a/navbar.css
+++ b/navbar.css
@@ -15,6 +15,7 @@ body {
     -webkit-user-select: none;
     user-select: none;
     box-sizing: border-box;
+    background-color: rgba(255, 255, 255, 0.5);
     }
 
     .menu-logo {
