--- a/navbar.css
+++ b/navbar.css
@@ -8,14 +8,14 @@ body {
     position: relative;
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
-    color: black;
+    margin-bottom: 30px;
+    color: white;
     padding: 10px 20px 20px 20px;
     z-index: 1;
     -webkit-user-select: none;
     user-select: none;
     box-sizing: border-box;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 1);
     }
 
     .menu-logo {
@@ -146,7 +146,7 @@ body {
     }
 
     .menu-container a {
-        color: black;
+        color: rgb(255, 255, 255);
     }
 
     .menu-container input {
