further linked the pages to completeness.

--- a/navbar.css
+++ b/navbar.css
@@ -15,7 +15,7 @@ body {
     -webkit-user-select: none;
     user-select: none;
     box-sizing: border-box;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: rgba(40, 43, 46,1);
     }
 
     .menu-logo {
