--- a/footer.css
+++ b/footer.css
@@ -3,7 +3,7 @@ footer{
 	bottom: 0;
 }
 .footer-distributed{
-	background-color: #292c2f;
+	background-color: rgb(40, 43, 46);
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
