--- a/Resources/views/customer.ejs
+++ b/Resources/views/customer.ejs
@@ -1,11 +1,11 @@
 <html>
     <head>
         <title>Customer</title>
-        <link rel="stylesheet" type="text/css" href="navbar.css" />
-        <link rel="stylesheet" type="text/css" href="footer.css" />
+        <link rel="stylesheet" type="text/css" href="../css/navbar.css" />
+        <link rel="stylesheet" type="text/css" href="../css/footer.css" />
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
         <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="customer_menu-main.css">
+        <link rel="stylesheet" href="../css/customer_menu-main.css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="footer, address, phone, icons" />
@@ -13,7 +13,7 @@
 
     <style>
         .first-screen{
-            background-image: url('images/customer_home_image.png');
+            background-image: url('../img/customer_home_image.png');
             background-repeat: no-repeat;
             background-attachment: scroll;
             background-position: center;
@@ -32,7 +32,7 @@
             <span></span>
           
             <a href="customer.html" class="menu-logo">
-              <img src="/images/image-removebg-preview.png" alt="My Awesome Website"/>
+              <img src="/../img/image-removebg-preview.png" alt="My Awesome Website"/>
             </a>
           
             <div class="menu">
