--- a/Resources/views/customer_cuisine.ejs
+++ b/Resources/views/customer_cuisine.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="footer.css" />
+        <link rel="stylesheet" type="text/css" href="../css/footer.css" />
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
         <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <style>
@@ -35,11 +35,11 @@
 
     <body>
         <div class="parent">
-            <a href="customer_menu-appetizers.html" ><img class="image1" src="images/cuisine1.png" /></a>
+            <a href="customer_menu-appetizers.html" ><img class="image1" src="../img/cuisine1.png" /></a>
             
-            <a href="customer_menu-main.html" ><img class="image3" src="images/cuisine3.png" /></a>
+            <a href="customer_menu-main.html" ><img class="image3" src="../img/cuisine3.png" /></a>
 
-            <a href="customer_menu-dessert.html" ><img class="image2" src="images/cuisine2.png" /></a>
+            <a href="customer_menu-dessert.html" ><img class="image2" src="../img/cuisine2.png" /></a>
           </div>
 
           <footer class="footer-distributed">
