--- a/Resources/views/customer_menu-main.ejs
+++ b/Resources/views/customer_menu-main.ejs
@@ -1,10 +1,10 @@
 <html>
     <head>
         <title>Customer</title>
-        <link rel="stylesheet" type="text/css" href="navbar.css" />
-        <link rel="stylesheet" type="text/css" href="customer_menu-main.css" />
+        <link rel="stylesheet" type="text/css" href="../css/navbar.css" />
+        <link rel="stylesheet" type="text/css" href="../css/customer_menu-main.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="footer.css" />
+        <link rel="stylesheet" type="text/css" href="../css/footer.css" />
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
         <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="style.css">
@@ -18,7 +18,7 @@
             <span></span>
           
             <a href="customer.html" class="menu-logo">
-              <img src="images/image-removebg-preview.png" alt="My Awesome Website"/>
+              <img src="../img/image-removebg-preview.png" alt="My Awesome Website"/>
             </a>
           
             <div class="menu">
@@ -57,10 +57,10 @@
                 <form class="toggle">
         
                     <input type="radio" id="choice1" name="choice" value="veg">
-                    <label for="choice1"><img src="images/veg-toggle.png" width="30px" height="30px"/></label>
+                    <label for="choice1"><img src="../img/veg-toggle.png" width="30px" height="30px"/></label>
         
                     <input type="radio" id="choice2" name="choice" value="nonveg">
-                    <label for="choice2"><img src="images/nonveg-toggle.png" width="30px" height="30"/></label>
+                    <label for="choice2"><img src="../img/nonveg-toggle.png" width="30px" height="30"/></label>
         
                     <div id="flap"><span class="content"></span></div>
         
